--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </ul>
         <h4>ACTIVITIES AND ACCOMPLISHMENTS</h4>
         <hr/>
-            <h4>Student Coordinator - Crescendo [The official Music Club of VNR VJIET]</h4>
+            <h4>Student Coordinator - Crescendo [The official Music Club of VNR VJIET][2021-22]</h4>
                 <p>
                     I was the Student Coordinator of Crescendo, the campus music club, while juggling my academic obligations and my love of music. 
                     At VNR VJIET, we actively participated in a variety of college events and fests, exhibiting our skills and fostering a love of music.
